# logi_ontol

./: .gitignore  AGENTKIT.MD  CHANGELOG.md  PROJECT_CLEANUP_REPORT.md  PROJECT_COMPLETE_DOCUMENTATION.md  README.md  WORK_SUMMARY.md  clusterer.py  full_data_ontology_mapping.py  hvdc_excel_to_rdf_converter_1.py  hvdc_ontology_engine_1.py  hvdc_ontology_engine_v2.py  hvdc_simple_rdf_converter.py  ontology_mapper_2.py  ontology_mapper_5.py  ontology_mapping_example_1.py  plan.md  process_hvdc_excel.py  publish.py  real_data_ontology_mapping.py  registry.py  requirements.txt  run_map_cluster.py  tools_ontology_mapper_1.py  tools_validate_yaml_ontology.py  validate_ontology_1.py  verify_archive.ps1
ABU/: ABU.MD  abu_dhabi_logistics_tag_dict_v1.csv
ARCHIVE/legacy/logiontology_v2.0.0_initial/: README.md  pyproject.toml
ARCHIVE/legacy/logiontology_v2.0.0_initial/.cursor/commands/: automate-precommit-ci.md
ARCHIVE/legacy/logiontology_v2.0.0_initial/.cursor/rules/: 000-core.mdc  010-tdd.mdc  040-ci.mdc  110-modern-python.mdc  300-logistics-domain.mdc
ARCHIVE/legacy/logiontology_v2.0.0_initial/ABU/: Guideline_Abu_Dhabi_Logistics (3).md  ‎Abu Dhabi Logistics님과의 WhatsApp 대화.txt
ARCHIVE/legacy/logiontology_v2.0.0_initial/configs/sparql/: flow_kpi_queries.sparql
ARCHIVE/legacy/logiontology_v2.0.0_initial/docs/: ARCHITECTURE.md  ARCHITECTURE_Mermaid.md
ARCHIVE/legacy/logiontology_v2.0.0_initial/tests/: test_ids.py
logiontology/: .dockerignore  CHANGELOG.md  CODEOWNERS  Dockerfile  HVDC 프로젝트 Protégé 플러그인 설정 파일 및 지원 자료.md  IMPLEMENTATION_SUMMARY.md  Protégé는 플러그인 시스템.md  README.md  README_FULL_STACK.md  plan.md  pyproject.toml  test_debug3.ttl  test_debug4.ttl
logiontology/.cursor/rules/: 100-python.mdc
logiontology/configs/: abu_sparql_queries.sparql  lightning_sparql_queries.sparql
logiontology/docs/: ARCHITECTURE_DESIGN_REPORT.md  ARCHITECTURE_DIAGRAMS.md  FLOW_CODE_IMPLEMENTATION_REPORT.md  PROTEGE_PLUGIN_INSTALLATION_GUIDE.md  WORK_LOG_2025_10_26.md
logiontology/logiontology/: cli.py
logiontology/logiontology/core/: ids.py
logiontology/logiontology/ingest/: excel.py  normalize.py
logiontology/logiontology/mapping/: registry.py
logiontology/logiontology/pipeline/: main.py
logiontology/logiontology/rdfio/: triplestore.py  writer.py
logiontology/logiontology/reasoning/: engine.py
logiontology/logiontology/validation/: schema_validator.py
logiontology/src/: cli.py
logiontology/src/analytics/: kpi_calculator.py
logiontology/src/api/: main.py
logiontology/src/api/endpoints/: cypher.py  kpi.py
logiontology/src/core/: models.py
logiontology/src/export/: __init__.py
logiontology/src/graph/: __init__.py  loader.py  neo4j_store.py
logiontology/src/ingest/: excel_to_ttl_with_events.py  flow_code_calculator.py  normalize.py
logiontology/src/integration/: site_normalizer.py
logiontology/src/mapping/: clusterer.py  registry.py
logiontology/src/ontology/: __init__.py  ontology_loader.py  validator.py
logiontology/src/pipeline/: main.py  run_map_cluster.py
logiontology/src/rdfio/: publish.py
logiontology/src/validation/: shacl_runner.py
logiontology/tests/: conftest.py  test_ids.py  test_scaffold_exists.py
logiontology/tests/api/: test_kpi_endpoint.py  test_main.py
logiontology/tests/integration/: test_excel_to_rdf_pipeline.py
logiontology/tests/unit/: test_excel_ingest.py  test_mapping_registry.py  test_mapping_registry_v2_6.py  test_models.py  test_schema_validator.py
(+331 files in other folders)
